@@ -41,7 +41,13 @@ class Standard(UniversalPoint):
 		'ConversionInputMin': '0',
 		'ConversionInputMax': '10',
 		'ConversionOutputMin': '0',
-		'ConversionOutputMax': '100'
+		'ConversionOutputMax': '100',
+		'Text Align': 'Center',
+		'ToolTipText': '',
+		'ToolTipFontSize': '48',
+		'ToolTipFontStroke': '#404040',
+		'ToolTipFill': '#E0E0E0',
+		'ToolTipEnable': 'False'
 	}
 	DEFAULT_PROPERTIES = {
 		'Id': 'UP',
